--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>SSA - Website</title>
-</head>
-<body>
-    <div id="intro-container">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet"
+        />
+        <title>SSA - Website</title>
+    </head>
+    <body>
         <header>
-            <h1><img src="SSA.png" alt="logo"></h1>
+            <h1><img src="SSA.png" alt="logo" /></h1>
             <nav>
                 <a href="#">HOME</a>
                 <a href="#">ABOUT</a>
                 <a href="#">MEMBERSHIP</a>
                 <a href="#">EVENTS</a>
                 <a href="#">CALENDAR</a>
+                <a id="menu-icon" onclick="rotateIcon(this)">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </a>
             </nav>
         </header>
+        <div id="shrink-header">
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">MEMBERSHIP</a>
+            <a href="#">EVENTS</a>
+            <a href="#">CALENDAR</a>
+        </div>
         <div id="banner">
             <div>
                 <div>
@@ -29,10 +43,15 @@
                     <h3>Saudi Student Association at Georgia Tech</h3>
                 </div>
                 <div>
-                    <img src="SSA.png" alt="logo">
+                    <img src="SSA.png" alt="logo" />
                 </div>
             </div>
         </div>
-    </div>
-</body>
+        <script type="text/javascript">
+            function rotateIcon(x) {
+                x.classList.toggle("change");
+                document.getElementById("shrink-header").classList.toggle("show");
+            }
+        </script>
+    </body>
 </html>
