--- a/events.html
+++ b/events.html
@@ -127,7 +127,94 @@
                 </div>
             </div>
             <h2>Upcoming Events</h2>
-            
+            <div class="card-container">
+                <div class="card" onclick="window.open('https://google.com', '_blank').focus();">
+                    <div
+                        class="img"
+                        style="background-image: url('group.png')"
+                    ></div>
+                    <div class="text">
+                        <h3>Saudi National Day</h3>
+                        <h6>Sep 24th, 2021 5 pm - 8 pm at Kendeda 210</h6>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Curabitur at blandit lectus, ac mollis felis.
+                            Integer leo turpis, sodales at condimentum sit amet,
+                            vestibulum ut turpis. Morbi tempus lacus lacus, eget
+                            molestie velit sollicitudin a. Quisque ultrices ex
+                            vel tortor blandit vulputate. In sagittis, risus
+                            quis cursus egestas, risus erat scelerisque erat,
+                            non fringilla ipsum tortor at ante. Sed elementum ac
+                            lacus quis sodales. Aliquam congue vel lacus in
+                            tempus. Cras sodales cursus elit ac tincidunt. Sed
+                            dignissim, nunc non tincidunt interdum, ligula
+                            mauris cursus arcu, ac iaculis nulla dui id nisi.
+                            Proin varius pharetra justo ac scelerisque. Nunc id
+                            erat id lacus feugiat finibus blandit non nisl.
+                            Fusce vestibulum facilisis tincidunt.
+                        </p>
+                    </div>
+                    <div class="overlay">
+                        <div>
+                            <h3>Event Photos</h3>
+                            <section>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" onclick="window.open('https://google.com', '_blank').focus();">
+                    <div
+                        class="img"
+                        style="background-image: url('group.png')"
+                    ></div>
+                    <div class="text">
+                        <h3>Saudi National Day</h3>
+                        <h6>Sep 24th, 2021 5 pm - 8 pm at Kendeda 210</h6>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Curabitur at blandit lectus, ac mollis felis.
+                            Integer leo turpis, sodales at condimentum sit amet,
+                            vestibulum ut turpis. Morbi tempus lacus lacus, eget
+                            molestie velit sollicitudin a. Quisque ultrices ex
+                            vel tortor blandit vulputate. In sagittis, risus
+                            quis cursus egestas, risus erat scelerisque erat,
+                            non fringilla ipsum tortor at ante. Sed elementum ac
+                            lacus quis sodales. Aliquam congue vel lacus in
+                            tempus. Cras sodales cursus elit ac tincidunt. Sed
+                            dignissim, nunc non tincidunt interdum, ligula
+                            mauris cursus arcu, ac iaculis nulla dui id nisi.
+                            Proin varius pharetra justo ac scelerisque. Nunc id
+                            erat id lacus feugiat finibus blandit non nisl.
+                            Fusce vestibulum facilisis tincidunt.
+                        </p>
+                    </div>
+                    <div class="overlay">
+                        <div>
+                            <h3>Event Photos</h3>
+                            <section>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                                <div style="background-image: url('group.png');"></div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <script type="text/javascript">
             function rotateIcon(x) {
